--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -42,6 +42,39 @@
 
             </div>
         </section>
+        <h1>Contador</h1>
+        <section>
+            <div id="datos">
+                <p>Inicio: 
+                    <input type="number" name="txtnum" id="txti">
+                </p>
+                <p>Fin: 
+                    <input type="number" name="txtnum" id="txtf">
+                </p>
+                <p>Salto: 
+                    <input type="number" name="txtnum" id="txts">
+                </p>
+                <p>
+                    <input type="button" value="Contar" onclick="contar()">
+                </p>
+            </div>
+            <div id="resul">
+
+            </div>
+        </section>
+        <h1>Tabla</h1>
+        <section>
+            <div>
+                <p>
+                    Elija un numero: 
+                    <input type="number" name="txtnum" id="numero">
+                    <input type="button" value="Generar" onclick="tabla()">
+                </p>
+            </div>
+            <div>
+                <select name="lista" id="seltab" size="10"></select>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy;Edson Ramiro Calle Mayta</p>
